force-app/main/default/objects/Account_Plan__c/fields/Strength_of_Sls_Leadership_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Strength_of_Sls_Leadership_Relationship__c</fullName>
    <label>Strength of Sls Leadership Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strong</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Weak</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>