force-app/main/default/objects/Account_Plan__c/fields/Supply_Chain_Actions__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Actions__c</fullName>
    <label>Supply Chain Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Improve_Supply_Chain_Metrics__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Increase Order Size</fullName>
            </value>
            <value>
                <fullName>Reduce number of deliveries</fullName>
            </value>
            <value>
                <fullName>Decrease number of lines</fullName>
            </value>
            <value>
                <fullName>Increase margin per line</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>