force-app/main/default/objects/Account_Plan__c/fields/Supply_Chain_Comments__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_Comments__c</fullName>
    <label>Supply Chain Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>