force-app/main/default/objects/Account_Plan__c/fields/Support_Test__c.field-meta.xml
<CustomField>
    <fullName>Support_Test__c</fullName>
    <formula>FY_Sales_Budget__c * Selling_Margin_PCT_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>