force-app/main/default/objects/Account_Plan__c/fields/Target_CBR_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_CBR_Meeting_Date__c</fullName>
    <label>Target CBR Meeting Date</label>
    <type>Date</type>
</CustomField>