force-app/main/default/objects/Account_Plan__c/fields/Top_10_Unprofitable_Account__c.field-meta.xml
<CustomField>
    <fullName>Top_10_Unprofitable_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 10 Unprofitable Account</label>
    <type>Checkbox</type>
</CustomField>