force-app/main/default/objects/Account_Plan__c/fields/Total_CAS_Potential__c.field-meta.xml
<CustomField>
    <fullName>Total_CAS_Potential__c</fullName>
    <formula>CAS_Potential_AR__c +  CAS_Potential_Growth__c +  CAS_Potential_Migration__c +  CAS_Potential_Pipeline__c +  CAS_Potential__c + CAS_Potential_Share__c +  CAS_Potential_Supply_Chain__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of all CAS $ Potential fields.</inlineHelpText>
    <label>CAS $ Potential - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>