force-app/main/default/objects/Account_Plan__c/fields/Total_Closed_Opps__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_Opps__c</fullName>
    <formula>Account__r.Sum_Num_Closed_Oppty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total count of all closed Opportunities associated with this Account. Pulls directly from the Account page.</inlineHelpText>
    <label>Total # Closed Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>