force-app/main/default/objects/Account_Plan__c/fields/Total_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Opps__c</fullName>
    <formula>Account__r.Count_of_Open_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total count of all open Opportunities associated with this Account. Pulls directly from the Account page.</inlineHelpText>
    <label>Total # Open Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>