force-app/main/default/objects/Account_Plan__c/fields/Value_of_Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Open_Opps__c</fullName>
    <formula>Account__r.Sum_of_Open_Opp_revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of the Annual Opporutnity Revenue for all open Opportunities associated with this Account. Pulls directly from the Account page.</inlineHelpText>
    <label>Total Value of Open Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>