force-app/main/default/objects/Account_Plan__c/fields/Veritiv_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Veritiv_Value_Proposition__c</fullName>
    <defaultValue>&quot;Document how Veritiv is uniquely positioned to best serve this customer through our integrity, team, people commitment, customer focus, operational excellence and passion for results.&quot;</defaultValue>
    <label>Veritiv Value Proposition</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>