force-app/main/default/objects/Account_Plan__c/fields/VLS__c.field-meta.xml
<CustomField>
    <fullName>VLS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VLS</label>
    <type>Checkbox</type>
</CustomField>