force-app/main/default/objects/Account_Plan__c/recordTypes/Account_Diagnostic.recordType-meta.xml
<RecordType>
    <fullName>Account_Diagnostic</fullName>
    <active>true</active>
    <label>Account Diagnostic</label>
</RecordType>