force-app/main/default/objects/Account_Plan__c/recordTypes/Customer_Link_Plan.recordType-meta.xml
<RecordType>
    <fullName>Customer_Link_Plan</fullName>
    <active>true</active>
    <label>Customer Link Plan</label>
</RecordType>