force-app/main/default/objects/Account_Plan__c/listViews/All_My_Account_Plans.listView-meta.xml
<ListView>
    <fullName>All_My_Account_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Review_Date__c</columns>
    <columns>Improve_AR_percent_Past_due__c</columns>
    <columns>Improve_pipeline__c</columns>
    <columns>Improve_pricing__c</columns>
    <columns>Increase__c</columns>
    <columns>Increase_sales_growth__c</columns>
    <columns>Increase_share_percent__c</columns>
    <columns>Reduce_churn__c</columns>
    <filterScope>Mine</filterScope>
    <label>All My Account Plans</label>
</ListView>