force-app/main/default/objects/Account_Plan__c/listViews/CompletedAccountPlans.listView-meta.xml
<ListView>
    <fullName>CompletedAccountPlans</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Review_Date__c</columns>
    <columns>Actual_Review_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actual_Review_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Completed Account Plans</label>
</ListView>