force-app/main/default/objects/Account_Plan__c/listViews/My_Customer_Link_Account_Plans.listView-meta.xml
<ListView>
    <fullName>My_Customer_Link_Account_Plans</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Summary__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account_Plan__c.Customer_Link_Plan</value>
    </filters>
    <label>My Customer Link Account Plans</label>
</ListView>