force-app/main/default/objects/Account_Plan__c/listViews/ReviewDateThisMonth.listView-meta.xml
<ListView>
    <fullName>ReviewDateThisMonth</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Review_Date__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Review_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Review Date This Month</label>
</ListView>